--- a/style.css
+++ b/style.css
@@ -428,3 +428,137 @@ a {
   padding: 20px;
   margin-top: 0px;
 }
+
+@media screen and (min-width: 375px) and (max-width: 430px) {
+  .home-links {
+    display: none;
+  }
+  nav {
+    padding: 20px 10px 20px 5px;
+  }
+  nav h1 {
+    font-size: 21.54px;
+  }
+  nav .ri-menu-fold-4-line {
+    font-size: 25px;
+  }
+  .hero-img {
+    width: 100%;
+    background-position: center;
+  }
+  .cover h1 {
+    text-align: center;
+    font-size: 22px;
+    font-weight: 800;
+    line-height: 20px;
+    padding: 20px 0 0 0;
+  }
+  .cover p {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+  .search {
+    width: 287px;
+    height: 288px;
+    flex-direction: column;
+    gap: 16px;
+  }
+  .hero-Content {
+    flex-direction: column;
+    width: 100%;
+    padding: 20px;
+    margin-top: 24px;
+  }
+  .hero-Content img {
+    width: 100%;
+    margin-top: 24px;
+  }
+  .point {
+    font-size: 20px;
+    font-weight: 800;
+    line-height: 25px;
+  }
+  .destination {
+    margin-top: 24px;
+  }
+  .destination h1 {
+    font-size: 20px;
+    font-weight: 800;
+    line-height: 25px;
+  }
+  .destination p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    padding: 10px;
+  }
+  .grid-image-section {
+    width: 100%;
+    margin-top: 24px;
+    padding: 20px;
+  }
+  .box-img1 {
+    width: 100%;
+    flex-direction: column;
+    gap: 16px;
+  }
+  .box-img1 img {
+    width: 100%;
+    height: 176px;
+  }
+  .box-img2 {
+    width: 100%;
+    flex-direction: column;
+    gap: 16px;
+  }
+  .box-img2 img {
+    width: 100%;
+    height: 176px;
+  }
+}
+.box-img3 {
+  width: 100%;
+  flex-direction: column;
+  gap: 16px;
+}
+.box-img3 img {
+  width: 100%;
+  height: 176px;
+}
+.hotel-section {
+  width: 100%;
+  margin-top: 16px;
+}
+.hotel {
+  flex-direction: column;
+  width: 100%;
+  padding: 20px;
+  gap: 24px;
+}
+.hotel-pick {
+  width: 100%;
+  padding: 10px 10px 10px 20px;
+}
+.hotel-service {
+  width: 100%;
+  padding: 10px 10px 10px 20px;
+}
+.hotels-h1 {
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 25px;
+}
+.hotels-p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.hotel-price {
+  padding: 10px 10px 10px 20px;
+}
+.single-div {
+  padding: 20px;
+  margin-top: 0px;
+}
