--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ a {
   justify-content: space-between;
   padding: 24px 0 0 0;
 }
-.box-img3 {
+.new-box-img3 {
   width: 100%;
   display: flex;
   justify-content: space-between;
